# pyAutoControl

./: .gitignore  LICENSE  README.md  constant.example.py  findImg.py  findWindow.py  gui.py  guiAction.py  main.py  pyproject.toml  test.py  test.txt
gui/: .babelrc  hello.html  package-lock.json  package.json  vue.config.js  webpack.rules.js
gui/css/: style.css
gui/src/: axios.js  index.html  main.js  renderer.jsx
gui/src/components/: MainButton.vue  app.jsx
gui/src/services/: apiService.js
gui/src/views/: Home.vue
main_server/: actions.py  gui.py  item.yaml  main.py  pyproject.toml  sql_app.db  ws.py
main_server/api/: main.py  models.py  request.py  schemas.py
main_server/package/: findImg.py
package/: __init__.py  findImg.py  findWindow.py  guiAction.py  guiInit.py
server/: crud.py  main.py  models.py  schemas.py  sql_app.db
sub_server/: actions.py  gui.py  main.py  pyproject.toml  socket.py  sql_app.db
sub_server/api/: __init__.py  crud.py  main.py
sub_server/package/: __init__.py  findWindow.py  guiAction.py
