[tool.poetry]
name = "pyautocontrol"
version = "0.1.0"
description = ""
authors = ["Tasuhuko Kanda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyautogui = "^0.9.50"

[tool.poetry.dev-dependencies]
Image = "^1.5.32"
python3-xlib = "^0.15"
pyscreeze = "^0.1.26"
opencv_python = "^4.3.0.36"
pyautogui = "^0.9.50"
pywin32 = "^228"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
